--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: M1sch13f 
-description: Some security stuff
+description: Anything relating to security from the members of M1sch13f
 logo: ./f4f237e4-3adc-493c-906e-479ebd11c7c9.jpg
